{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 107,
  "lineage": "bf73aea5-1865-66b9-24e0-6d51316e7ee6",
  "resources": [
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "netinterface1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkInterfaces/ntif1",
            "internal_domain_name_suffix": "bs3b1ny5i1ne3bqg0om2t5e0xd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.1.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/publicIPAddresses/pip_1",
                "subnet_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/virtualNetworks/projectvnet/subnets/websubnet"
              }
            ],
            "location": "eastus",
            "name": "ntif1",
            "private_ip_address": "10.1.3.4",
            "private_ip_addresses": [
              "10.1.3.4"
            ],
            "resource_group_name": "revanth"
          },
          "dependencies": [
            "module.testvpc.azurerm_public_ip.public_ip",
            "module.testvpc.azurerm_subnet.public_subnets",
            "module.testvpc.azurerm_virtual_network.Vnet1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkInterfaces/ntif2",
            "internal_domain_name_suffix": "bs3b1ny5i1ne3bqg0om2t5e0xd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig2",
                "primary": true,
                "private_ip_address": "10.1.3.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/publicIPAddresses/pip_2",
                "subnet_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/virtualNetworks/projectvnet/subnets/websubnet"
              }
            ],
            "location": "eastus",
            "name": "ntif2",
            "private_ip_address": "10.1.3.5",
            "private_ip_addresses": [
              "10.1.3.5"
            ],
            "resource_group_name": "revanth"
          },
          "dependencies": [
            "module.testvpc.azurerm_public_ip.public_ip",
            "module.testvpc.azurerm_subnet.public_subnets",
            "module.testvpc.azurerm_virtual_network.Vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "netinterface2private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkInterfaces/printif1",
            "internal_domain_name_suffix": "bs3b1ny5i1ne3bqg0om2t5e0xd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "priipconfig1",
                "primary": true,
                "private_ip_address": "10.1.4.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/virtualNetworks/projectvnet/subnets/appsubnet"
              }
            ],
            "location": "eastus",
            "name": "printif1",
            "private_ip_address": "10.1.4.5",
            "private_ip_addresses": [
              "10.1.4.5"
            ],
            "resource_group_name": "revanth"
          },
          "dependencies": [
            "module.testvpc.azurerm_subnet.private_subnets",
            "module.testvpc.azurerm_virtual_network.Vnet1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkInterfaces/printif2",
            "internal_domain_name_suffix": "bs3b1ny5i1ne3bqg0om2t5e0xd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "priipconfig2",
                "primary": true,
                "private_ip_address": "10.1.4.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/virtualNetworks/projectvnet/subnets/appsubnet"
              }
            ],
            "location": "eastus",
            "name": "printif2",
            "private_ip_address": "10.1.4.4",
            "private_ip_addresses": [
              "10.1.4.4"
            ],
            "resource_group_name": "revanth"
          },
          "dependencies": [
            "module.testvpc.azurerm_subnet.private_subnets",
            "module.testvpc.azurerm_virtual_network.Vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkInterfaces/ntif1|/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "network_interface_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkInterfaces/ntif1",
            "network_security_group_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkSecurityGroups/nsg1"
          },
          "dependencies": [
            "module.testvpc.azurerm_network_interface.netinterface1",
            "module.testvpc.azurerm_network_security_group.nsg1",
            "module.testvpc.azurerm_public_ip.public_ip",
            "module.testvpc.azurerm_subnet.public_subnets",
            "module.testvpc.azurerm_virtual_network.Vnet1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkInterfaces/ntif2|/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "network_interface_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkInterfaces/ntif2",
            "network_security_group_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkSecurityGroups/nsg1"
          },
          "dependencies": [
            "module.testvpc.azurerm_network_interface.netinterface1",
            "module.testvpc.azurerm_network_security_group.nsg1",
            "module.testvpc.azurerm_public_ip.public_ip",
            "module.testvpc.azurerm_subnet.public_subnets",
            "module.testvpc.azurerm_virtual_network.Vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkInterfaces/printif1|/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkSecurityGroups/nsg2",
            "network_interface_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkInterfaces/printif1",
            "network_security_group_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkSecurityGroups/nsg2"
          },
          "dependencies": [
            "module.testvpc.azurerm_network_interface.netinterface2private",
            "module.testvpc.azurerm_network_security_group.nsg2",
            "module.testvpc.azurerm_subnet.private_subnets",
            "module.testvpc.azurerm_virtual_network.Vnet1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkInterfaces/printif2|/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkSecurityGroups/nsg2",
            "network_interface_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkInterfaces/printif2",
            "network_security_group_id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkSecurityGroups/nsg2"
          },
          "dependencies": [
            "module.testvpc.azurerm_network_interface.netinterface2private",
            "module.testvpc.azurerm_network_security_group.nsg2",
            "module.testvpc.azurerm_subnet.private_subnets",
            "module.testvpc.azurerm_virtual_network.Vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "location": "eastus",
            "name": "nsg1",
            "resource_group_name": "revanth",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_All",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/networkSecurityGroups/nsg2",
            "location": "eastus",
            "name": "nsg2",
            "resource_group_name": "revanth",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_All",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/publicIPAddresses/pip_1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip_1",
            "resource_group_name": "revanth",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Demo"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/publicIPAddresses/pip_2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip_2",
            "resource_group_name": "revanth",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Demo"
            }
          }
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.4.0/24",
            "address_prefixes": [
              "10.1.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/virtualNetworks/projectvnet/subnets/appsubnet",
            "name": "appsubnet",
            "resource_group_name": "revanth",
            "virtual_network_name": "projectvnet"
          },
          "dependencies": [
            "module.testvpc.azurerm_virtual_network.Vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.3.0/24",
            "address_prefixes": [
              "10.1.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/virtualNetworks/projectvnet/subnets/websubnet",
            "name": "websubnet",
            "resource_group_name": "revanth",
            "virtual_network_name": "projectvnet"
          },
          "dependencies": [
            "module.testvpc.azurerm_virtual_network.Vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/virtualNetworks/projectvnet/subnets/Application_Gateway_subnet",
            "name": "Application_Gateway_subnet",
            "resource_group_name": "revanth",
            "virtual_network_name": "projectvnet"
          },
          "dependencies": [
            "module.testvpc.azurerm_virtual_network.Vnet1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.2.0/24",
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/virtualNetworks/projectvnet/subnets/management_subnet",
            "name": "management_subnet",
            "resource_group_name": "revanth",
            "virtual_network_name": "projectvnet"
          },
          "dependencies": [
            "module.testvpc.azurerm_virtual_network.Vnet1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.5.0/24",
            "address_prefixes": [
              "10.1.5.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/virtualNetworks/projectvnet/subnets/sqlsubnet",
            "name": "sqlsubnet",
            "resource_group_name": "revanth",
            "virtual_network_name": "projectvnet"
          },
          "dependencies": [
            "module.testvpc.azurerm_virtual_network.Vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "dns_servers": [
              "8.8.8.8",
              "8.8.4.4"
            ],
            "guid": "b71dba0c-461f-4eda-8606-d399c9fc9abb",
            "id": "/subscriptions/596edce6-97a9-44ad-acf7-e4848b14c029/resourceGroups/revanth/providers/Microsoft.Network/virtualNetworks/projectvnet",
            "location": "eastus",
            "name": "projectvnet",
            "resource_group_name": "revanth",
            "vm_protection_enabled": false
          }
        }
      ]
    }
  ]
}